--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -11,6 +11,7 @@
       {{/each}}
 {{/if}}
 <form method="post" action="/users/register">
+<input type="hidden" name="_csrf" value="{{csrfToken}}">
    <div class="form-group">
     <label>Name</label>
     <input type="text" class="form-control" placeholder="Name" name="name">
@@ -26,6 +27,8 @@
   <div class="form-group">
     <label>Password</label>
     <input type="password" class="form-control" placeholder="Password" name="password">
+      <p class="help-block">Password should consist of atleast one digit and a special character
+      and of length at least 8 </p>
   </div>
   <div class="form-group">
     <label>Confirm Password</label>
